# ccl

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
docs/: dev-plan.md  model-agnostic-plan.md  refactor.md
laws/eu/: gdpr.md
laws/iso/: iso27001.md
laws/jp/: appi.md
laws/kr/: personal-information-protection-act.md
laws/us/: ccpa.md  hipaa.md
src/ccl/: cli.py  models.py
src/ccl/audit/: __init__.py  logger.py
src/ccl/extractor/: __init__.py  base.py  csv_extractor.py  parquet_extractor.py
src/ccl/llm/: __init__.py  adapter.py  augmentor.py  claude.py  ollama.py  openai.py  prompts.py
src/ccl/policy/: __init__.py  law_parser.py  rule_evaluator.py  rule_registry.py
src/ccl/report/: __init__.py  builder.py
src/ccl/scanner/: __init__.py  patterns.py  pii_scanner.py
tests/: conftest.py  test_cli.py  test_extractor.py  test_law_parser.py  test_llm.py  test_pii_scanner.py  test_report.py  test_rule_evaluator.py
tests/fixtures/: metadata_no_consent.json  metadata_with_consent.json  sample_clean.csv  sample_violations.csv
